add simple service structures and get account balance api
