# src/main/resources/openapi.yaml
@@ -12,8 +12,7 @@ paths:
           required: true
           description: ID of the account balance to retrieve
           schema:
-            type: integer
-
+            type: string
       responses:
         '200':
           description: account balance retrieved
@@ -88,6 +87,9 @@ components:
           type: string
         balance:
           type: number
+      required:
+        - id
+        - balance
     FundTransferRequest:
       type: object
       properties:
@@ -115,6 +117,11 @@ components:
           enum: [SUCCESS, FAILED]
         error-message:
           type: string
+      required:
+        - source-account-id
+        - destination-account-id
+        - amount
+        - status
     ApiError:
       type: object
       properties:
